feat: 모달 작성 및 코드 간략화

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,6 +18,7 @@ html, body {
   --font-Quicker: 1.5625rem;
   --font-large: 1.375rem;
   --font-md: 1.25rem;
+  --font-md1: 0.875rem;
   --font-small: 0.75rem;
   --font-micro: 0.5rem;
 }
